--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -192,6 +192,7 @@ SET(FIXEDPOINT_TESTS_FILES
     "algebra/fixedpoint/plonk/ml"
     "algebra/fixedpoint/plonk/advanced_operations"
     "algebra/fixedpoint/plonk/tester"
+    "algebra/fixedpoint/plonk/trigonometric"
 )
 
 SET(ALGEBRA_TESTS_FILES
