--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -193,6 +193,7 @@ SET(FIXEDPOINT_TESTS_FILES
     "algebra/fixedpoint/plonk/advanced_operations"
     "algebra/fixedpoint/plonk/tester"
     "algebra/fixedpoint/plonk/trigonometric"
+    "algebra/fixedpoint/plonk/boolean"
 )
 
 SET(ALGEBRA_TESTS_FILES
